<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Data Warehouse</string>
    <string name="app_title">%1$s - %2$s</string>
    <string name="rename">Rename</string>
    <string name="id">ID</string>
    <string name="row">Row</string>
    <string name="col">Col</string>
    <string name="action_new_workarea">New Work Area</string>
    <string name="action_new_field">New Column</string>
    <string name="oldName">Old Name</string>
    <string name="newName">New Name</string>
    <string name="oldValue">Old Value</string>
    <string name="newValue">New Value</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="hintNewName">Enter a New Name</string>
    <string name="hintNewValue">Enter a New Value</string>
    <string name="action_open_workareas">Go to...</string>
    <string name="action_edit_workareas">Edit Warehouse...</string>
    <string name="action_data_transfer">File...</string>
    <string name="action_import_file">Import...</string>
    <string name="action_save_as_file">Save as...</string>
    <string name="action_open_file">Open...</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_rename_workarea">Rename Work Area</string>
    <string name="action_add">Add Row</string>
    <string name="hintEnterNew">Enter New %1$s</string>
    <string name="hintEnterOrder">Enter Order</string>
    <string name="action_reorder_fields">Reorder Columns</string>
    <string name="dataHistory">History</string>
    <string name="date">Date</string>
    <string name="hintIndex">Index</string>
    <string name="user">User</string>
    <string name="value">Value</string>
    <string name="defaultIndexName">Index</string>
    <string name="column_name">Column Name</string>
    <string name="column_order">Column Order (1..%1$d)</string>
    <string name="settingsUserName">User name</string>
    <string name="hintSettingsUserName">Enter your name</string>

</resources>
